--- a/Comments-Raffler-Mod/templates/result.html
+++ b/Comments-Raffler-Mod/templates/result.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/style_result.css">
     <title>Fabrica Rewards</title>
 </head>
 
@@ -17,11 +18,11 @@
         <p>A publicação teve {{comments}} comentários</p>
         <h3>
             {% for winner in result %}
-            <p>{{winner}}</p>
+            <p id="p_winner">{{winner}}</p>
             {% endfor %}
         </h3>
         <form action="/" method="get">
-            <p><button>Realizar outro sorteio</button></p>
+            <p><button id="button_return">Realizar outro sorteio</button></p>
             </p>
     </center>
 </body>
