--- a/Comments-Raffler-Mod/templates/index.html
+++ b/Comments-Raffler-Mod/templates/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <center>
-    <h1>Sorteio do Instagram</h1>
+    <h1>Sorteio Instagram</h1>
 
   <div class="options"> 
     <form action="/result" method="get">
